--- a/index.html
+++ b/index.html
@@ -5,9 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors Game</title>
+    <link rel="stylesheet" href="styles.css">
     <script src="script.js"></script>
 </head>
 <body>
+    <div class = "main-heading">
+        <h1>Let's Play some Rock, Paper, Scissors!</h1>
+    </div>
+    <div class="container" >
+        <button id = "btn-rock">Rock</button>
+        <button id = "btn-paper">Paper</button>
+        <button id = "btn-scissors">Scissors</button>
+
+    </div>
+
+    
   
     
 </body>
