added imges, starts html and css layout

--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
 </head>
 <body>
     <div class = "main-heading">
-        <h1>Let's Play some Rock, Paper, Scissors!</h1>
+        <img id="head-img" src="images/another-paper-rock-scissors.jpg" alt="picture of paper rock scissors hand gestures" >
+        <div class="text-over-img">Let's Play some Rock, Paper, Scissors!</div>
+        
     </div>
-    <div class="container" >
-        <button id = "btn-rock">Rock</button>
-        <button id = "btn-paper">Paper</button>
-        <button id = "btn-scissors">Scissors</button>
+    <div class="game-container" >
+        <button class = "selection-btn" id = "btn-rock">Rock</button>
+        <button class = "selection-btn" id = "btn-paper">Paper</button>
+        <button class = "selection-btn" id = "btn-scissors">Scissors</button>
 
     </div>
 
