--- a/index.html
+++ b/index.html
@@ -12,14 +12,18 @@
     <div class = "main-heading">
         <h1>Rock, Paper, Scissors!</h1>       
     </div>
-    <div class="game-container" >
-        <img id="game-img" src="images/another-paper-rock-scissors.jpg" alt="picture of paper rock scissors hand gestures" >
-        <div class="btn-container">
-            <button class = "selection-btn" id = "btn-rock">Rock</button>
-            <button class = "selection-btn" id = "btn-paper">Paper</button>
-            <button class = "selection-btn" id = "btn-scissors">Scissors</button>
-        </div>
+    <div class="score-board-container">
+        <div class = score-box-left>Your Choice:</div>
+        <div class = score-box-right>PC Choice:</div>
     </div>
-    
+        <div class="game-container" >
+            <img id="game-img" src="images/another-paper-rock-scissors.jpg" alt="picture of paper rock scissors hand gestures" >
+            <div class="btn-container">
+                <button class = "selection-btn" id = "btn-rock">Rock</button>
+                <button class = "selection-btn" id = "btn-paper">Paper</button>
+                <button class = "selection-btn" id = "btn-scissors">Scissors</button>    
+            </div>
+            <p class="game-text">You are playing against the computer, make your choice. The first to 5 wins!</p>
+        </div> 
 </body>
 </html>
