very minor updates

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
                 <button class = "selection-btn" id = "btn-paper">Paper</button>
                 <button class = "selection-btn" id = "btn-scissors">Scissors</button>    
             </div>
-            <p class="game-text">You are playing against the computer, make your choice. The first to 5 wins!</p>
+            <p class="game-text">You are playing against the computer. Make your choice. The first to 5 wins!</p>
         </div> 
+        <script src="script.js"></script>
 </body>
 </html>
