almost comleted game, need to fix bug when game finishes on a tie

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
         <h1>Rock, Paper, Scissors!</h1>       
     </div>
     <div class="score-board-container">
-        <div class = score-box-left>Your Choice:</div>
-        <div class = score-box-right>PC Choice:</div>
+        <div class = score-box-left>Player Choice:</div>
+        <div class = score-box-middle>--- First to 5 Points Wins --- </div>
+        <div class = score-box-right>Computer Choice:</div>
     </div>
         <div class="game-container" >
             <img id="game-img" src="images/another-paper-rock-scissors.jpg" alt="picture of paper rock scissors hand gestures" >
@@ -23,7 +24,7 @@
                 <button class = "selection-btn" id = "btn-paper">Paper</button>
                 <button class = "selection-btn" id = "btn-scissors">Scissors</button>    
             </div>
-            <p class="game-text">You are playing against the computer. Make your choice. The first to 5 wins!</p>
+          
         </div> 
         <script src="script.js"></script>
 </body>
